--- a/.github/workflows/test_schedule.yml
+++ b/.github/workflows/test_schedule.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_PAT }}  # Required to push changes
+          token: ${{ secrets.GITHUB_TOKEN }}  # Use GitHub's built-in token
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -27,5 +27,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add data.csv
-          git commit -m "Auto-update data.csv"
+          git commit -m "Auto-update data.csv [skip ci]" || echo "No changes to commit"
           git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Pass the token for authentication
