--- a/.github/workflows/test_schedule.yml
+++ b/.github/workflows/test_schedule.yml
@@ -1,6 +1,9 @@
 name: Update CSV File
 
 on:
+  push:
+    branches:
+      - test-schedule  # ✅ Runs only when pushing to this branch
   schedule:
     - cron: "0 * * * *"  # Runs every hour at minute 0
   workflow_dispatch:  # Allows manual triggering
@@ -31,6 +34,6 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add data.csv
           git commit -m "Auto-update data.csv [skip ci]" || echo "No changes to commit"
-          git push origin main
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Pass the token for authentication
